# nanoleaf-controller

./: .gitignore  AUTHORS  ChangeLog  README  configure.ac  nanoleaf_controller.lsm.in  nanoleaf_controller.spec.in  nanoleaf_controller.texinfo
example-responses/: controller-info.json
include/: aurora.h  discovery.h  mycurlpp.h  streaming.h  util.h
m4/: check_cpp_lib.m4
man/: Makefile.am  nanoleaf_controller.1
src/: Makefile.am  aurora.cpp  discovery.cpp  main.cpp  streaming.cpp
